section spacing fixed

--- a/CSS/events.css
+++ b/CSS/events.css
@@ -7,7 +7,8 @@ html {
 }
 
 .events {
-    /* position: relative; */
+    position: relative;
+    top: 100vh;
     background-color: #1a0b2b;
     font-family: "Share Tech", sans-serif;
     color: white;
